added requests & responses endpoints
