# src/modules/requests/dto/create.dto.ts
@@ -1,0 +1,17 @@
+export class CreateRequestDto {
+  title: string;
+  body: string;
+  contactMail?: string;
+}
+
+export class CreateResponseDto {
+  requestUid: string;
+  title: string;
+  body: string;
+  cancel: boolean;
+}
+
+export class CancelAllRequestsDto {
+  title: string;
+  body: string;
+}
