# src/modules/requests/types/filter.types.ts
@@ -1,0 +1,3 @@
+import type { TRequestStatus } from '@/db/drizzle/schema/requests/types/status.types';
+
+export type TRequestFilter = 'All' | TRequestStatus;
